// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Configure clan instructions Sets the name 1`] = `
TransactionInstruction {
  "data": {
    "data": [
      197,
      215,
      183,
      186,
      71,
      46,
      171,
      101,
      4,
      0,
      0,
      0,
      76,
      73,
      68,
      79,
    ],
    "type": "Buffer",
  },
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(4vK9oDnDgPbFGtCwdJvm3hHay9EueHDxJfNoSZMnQEZw) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            14849714,
            60276740,
            37220770,
            46974800,
            7473670,
            34298479,
            52121247,
            29364144,
            36269116,
            954071,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": PublicKey(4NGov9AUKpbbkQU9AaS5ZqhEEzgWG3MSZrziDsLuWQBa) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            37455561,
            2279437,
            36527539,
            35932435,
            29536361,
            32229414,
            12812646,
            53556135,
            34146000,
            819592,
            0,
          ],
        },
      },
    },
  ],
  "programId": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
    "_bn": BN {
      "length": 10,
      "negative": 0,
      "red": null,
      "words": [
        8873870,
        60943108,
        23935113,
        33099803,
        59555925,
        65803128,
        11262563,
        66819466,
        50754419,
        120882,
        0,
      ],
    },
  },
}
`;

exports[`Configure clan instructions Sets the description 1`] = `
TransactionInstruction {
  "data": {
    "data": [
      87,
      204,
      33,
      181,
      26,
      229,
      252,
      151,
      16,
      0,
      0,
      0,
      78,
      111,
      32,
      109,
      111,
      114,
      101,
      32,
      109,
      97,
      114,
      105,
      110,
      97,
      100,
      101,
    ],
    "type": "Buffer",
  },
  "keys": [
    {
      "isSigner": false,
      "isWritable": true,
      "pubkey": PublicKey(4vK9oDnDgPbFGtCwdJvm3hHay9EueHDxJfNoSZMnQEZw) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            14849714,
            60276740,
            37220770,
            46974800,
            7473670,
            34298479,
            52121247,
            29364144,
            36269116,
            954071,
            0,
          ],
        },
      },
    },
    {
      "isSigner": true,
      "isWritable": false,
      "pubkey": PublicKey(4NGov9AUKpbbkQU9AaS5ZqhEEzgWG3MSZrziDsLuWQBa) PublicKey {
        "_bn": BN {
          "length": 10,
          "negative": 0,
          "red": null,
          "words": [
            37455561,
            2279437,
            36527539,
            35932435,
            29536361,
            32229414,
            12812646,
            53556135,
            34146000,
            819592,
            0,
          ],
        },
      },
    },
  ],
  "programId": PublicKey(VoTaGDreyne7jk59uwbgRRbaAzxvNbyNipaJMrRXhjT) PublicKey {
    "_bn": BN {
      "length": 10,
      "negative": 0,
      "red": null,
      "words": [
        8873870,
        60943108,
        23935113,
        33099803,
        59555925,
        65803128,
        11262563,
        66819466,
        50754419,
        120882,
        0,
      ],
    },
  },
}
`;
